# bookmarks-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/bookmarks_mcp/: __init__.py  __main__.py  cli.py  errors.py  info.py  models.py  paths.py  server.py  service.py  storage.py  web.py  web_supervisor.py
src/bookmarks_mcp/importers/: __init__.py  json_io.py  netscape.py
src/bookmarks_mcp/storage/: __init__.py  base.py  chrome.py  factory.py  json_file.py
src/bookmarks_mcp/templates/: base.html  index.html
tests/: conftest.py  test_chrome_storage.py  test_importers.py  test_models.py  test_server.py  test_service.py  test_storage.py  test_web.py  test_web_supervisor.py
