[project]
name = "bookmarks-mcp"
version = "0.3.0"
description = "MCP server + local web UI for personal bookmark management with folders, tags, and portable JSON storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "yazilim.vip" }]
keywords = ["mcp", "bookmarks", "fastmcp", "fastapi", "python", "uv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "platformdirs>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "filelock>=3.15.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/yazilim-vip/bookmarks-mcp"
Repository = "https://github.com/yazilim-vip/bookmarks-mcp"
Issues = "https://github.com/yazilim-vip/bookmarks-mcp/issues"

[project.scripts]
bookmarks-mcp = "bookmarks_mcp.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookmarks_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
